--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -573,9 +573,9 @@ ol {
     counter-reset: item
 }
 
-ol>li:before {
-    content: counters(item, ".") " ";
-    counter-increment: item
+li:before {
+  content: counters(item, ".") " ";
+  counter-increment: item
 }
 
 ol ol,
